# confik

./: .codecov.yml  .cspell.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependabot-reviewer.yml  lint.yml  release.yml
confik/: CHANGELOG.md  Cargo.toml  README.md
confik-macros/: Cargo.toml  README.md
confik-macros/src/: lib.rs  tests.rs
confik-macros/tests/: trybuild.rs
confik-macros/tests/trybuild/: 02-create-builder.rs  03-simple-impl.rs  04-simple-build.rs  09-pub-target.rs  10-unnamed_struct_fields.rs  12-complex-secret-source.rs  14-simple-default.rs  15-default-default.rs  16-partial-default.rs  18-secret-default.rs  19-derive.rs  20-enum.rs  21-field-from.rs  22-dataless-types.rs  23-where-clause.rs  24-field-try_from.rs  25-pass-enum-untagged.rs  28-field-vis.rs  30-skip-field.rs  33-skip-struct-default.rs  34-struct-default-from.rs  35-struct-default-try-from.rs  37-default-try-from-target-typed.rs  fail-config-alone.stderr  fail-config-empty-list.stderr  fail-config-name-value.rs  fail-config-name-value.stderr  fail-crate-not-in-scope.stderr  fail-default-empty.rs  fail-default-empty.stderr  fail-default-invalid-expr.rs  fail-default-invalid-expr.stderr  fail-default-not-expression.rs  fail-default-not-expression.stderr  fail-default-numeric-lit.rs  fail-default-numeric-lit.stderr  fail-default-parse.rs  fail-default-parse.stderr  fail-derive-literal.rs  fail-derive-literal.stderr  (+17 more)
confik-macros/tests/trybuild/compile-fail/: config-name-value.stderr  crate-not-in-scope.rs  crate-not-in-scope.stderr  default-invalid-expr.stderr  default-not-expression.stderr  default-parse.stderr  field-from-unknown-type.rs  field-from-unknown-type.stderr  forward-literal.stderr  from-and-try-from.rs  from-and-try-from.stderr  not-a-type.stderr  secret-extra-attr.stderr  struct-default-missing-default-trait.rs  struct-default-missing-default-trait.stderr  struct-default-on-enum.stderr  try-from-not-implemented.stderr  uncreatable-type.stderr
confik-macros/tests/trybuild/compile-pass/: comments.rs  crate-remap.rs  dataless-types.rs  default-from-target-typed.rs  field-access.rs  named-builder.rs  named-field-vis.rs  nested-struct.rs  parse.rs  partial-default.rs  phantom-data.rs  redefined-prelude-types.rs  secret-default.rs  simple-build-with-enum.rs  simple-secret-source.rs  skip-struct-default.rs  struct-default.rs  unnamed-secret-source.rs
confik/examples/: ahash.rs  bigdecimal.rs  defaulting.rs  derives.rs  foreign_type_via_value.rs  reloading.rs  secret_string.rs  simple.rs
confik/src/: builder.rs  common.rs  errors.rs  helpers.rs  lib.md  lib.rs  path.rs  reloading.rs  secrets.rs  sources.rs  std_impls.rs  third_party.rs
confik/src/sources/: corn_source.rs  env_source.rs  file_source.rs  ini_source.rs  json5_source.rs  json_source.rs  mod.rs  offset_source.rs  ron_source.rs  toml_source.rs  yaml_source.rs
confik/tests/: main.rs  third_party.rs
confik/tests/array/: mod.rs
confik/tests/common/: mod.rs
confik/tests/complex_enums/: mod.rs
confik/tests/defaulting_containers/: mod.rs
confik/tests/forward/: mod.rs
confik/tests/keyed_containers/: mod.rs
confik/tests/option_builder/: mod.rs
confik/tests/secret/: mod.rs
confik/tests/secret_option/: mod.rs
confik/tests/serde_forward/: mod.rs
confik/tests/singly_nested_tests/: mod.rs
confik/tests/try_from/: mod.rs
confik/tests/unkeyed_containers/: mod.rs
scripts/: bump-changelogs  update-macro-pin  update-release-notes
tests/: main.rs
tests/array/: mod.rs
tests/complex_enums/: mod.rs
tests/keyed_containers/: mod.rs
tests/secret/: mod.rs
