[package]
name = "confik-macros"
version = "0.11.0"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Macros for confik"
keywords = ["parser", "serde", "utility", "config"]
categories = ["config"]
repository = "https://github.com/x52dev/confik"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.67"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }

[dev-dependencies]
assert_matches = "1.5"
confik = "0.11"
rustversion = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
trybuild = { version = "1", features = ["diff"] }
