[package]
name = "confik-macros"
version = "0.13.0"
description = "Macros for confik"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }

[dev-dependencies]
assert_matches = "1.5"
confik = "0.13"
indoc = "2"
rustversion-msrv = "0.100"
serde = { version = "1", features = ["derive"] }
serde-bool = "0.1"
toml = "0.8"
trybuild = { version = "1", features = ["diff"] }
