[package]
name = "confik"
version = "0.11.3"
description = "A library for reading application configuration split across multiple sources"
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["parser", "serde", "utility", "config"]
categories = ["config"]
repository = "https://github.com/x52dev/confik"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.67"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = [
  "humantime_serde", # used in serde macro attributes
  "serde_with",      # used in doctests
]

[features]
default = ["env", "toml"]

# Source types
env = ["dep:envious"]
json = ["dep:serde_json"]
toml = ["dep:toml"]

# Destination types
common = []
camino = ["dep:camino"]
chrono = ["dep:chrono"]
ipnetwork = ["dep:ipnetwork"]
rust_decimal = ["dep:rust_decimal"]
url = ["dep:url"]
uuid = ["dep:uuid"]
secrecy = ["dep:secrecy"]

[dependencies]
confik-macros = "=0.11.1"

cfg-if = "1"
serde = { version = "1", default-features = false, features = ["std", "derive"] }
thiserror = "1"

envious = { version = "0.2", optional = true }
serde_json = { version = "1", optional = true }
toml = { version = "0.8", optional = true, default-features = false, features = ["parse"] }

camino = { version = "1", optional = true, features = ["serde1"] }
chrono = { version = "0.4.20", optional = true, default-features = false }
ipnetwork = { version = "0.20", optional = true, features = ["serde"] }
rust_decimal = { version = "1", optional = true, features = ["serde"] }
secrecy = { version = "0.8", optional = true, features = ["serde"] }
url = { version = "2", optional = true, features = ["serde"] }
uuid = { version = "1", optional = true, features = ["serde"] }

[dev-dependencies]
assert_matches = "1.5"
humantime-serde = "1"
indoc = "2"
serde_with = "3"
temp-env = "0.3"
tempfile = "3"

[[example]]
name = "simple"
required-features = ["toml"]

[[example]]
name = "derives"
required-features = ["toml", "camino"]

[[example]]
name = "secret_string"
required-features = ["toml", "secrecy"]
